--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,6 +3,16 @@
 
 name: Deploy to Firebase Hosting on PR
 "on": pull_request
+
+env:
+  API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+  AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+  PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+  STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+  MESSAGE_SENDER_ID: ${{ secrets.FIREBASE_MESSAGE_SENDER_ID }}
+  APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+  MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
+
 jobs:
   build_and_preview:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
