feat: add enviroment

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,7 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.qa.ts",
+                  "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
