--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           FIREBASE_DETAILS: "${{ secrets.FIREBASE_DETAITLS }}"
       #continue with build
-      - run: npm ci && npm run build --prod
+      - run: npm ci && npm i && npm run build --prod
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
